# si-esb

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  heroku.yml  main.go  pyproject.toml
go_esb/: Dockerfile  go.mod  go.sum  main.go  transformer.go
src/: cache.py  main.py
src/models/: message.py
