[tool.poetry]
name = "si-esb"
version = "0.1.0"
description = ""
authors = ["AndreasPB <andreas.p.brodersen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
