[tool.poetry]
name = "si-esb"
version = "0.1.0"
description = ""
authors = ["AndreasPB <andreas.p.brodersen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
fastapi = "^0.75.2"
uvicorn = { extras = ["standard"], version = "^0.17.6" }
redis = "^4.2.2"
pydantic = "^1.9.0"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
